apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'
apply plugin: 'com.google.firebase.crashlytics'

android {
    signingConfigs {
        config {
            keyAlias 'keyrelease'
            keyPassword 'nollimakali86'
            storeFile file('keystore.jks')
            storePassword 'nollimakali86'
        }
    }
    compileSdkVersion 32
    defaultConfig {
        applicationId "com.litron.litronremote"
        minSdkVersion 21
        targetSdkVersion 31
        versionCode 13
        versionName "3.2"
        archivesBaseName = "Litron(FA-224)-version_${versionName}-build_${versionCode}"
        vectorDrawables.useSupportLibrary = true
        signingConfig signingConfigs.config
    }
    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += [
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
    buildTypes {
        release {
            debuggable false
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }
    namespace 'com.litron.litronremote'
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
    implementation 'com.google.firebase:firebase-crashlytics:18.3.2'
    implementation 'com.google.firebase:firebase-analytics:21.2.0'
    testImplementation 'androidx.arch.core:core-testing:2.0.0'

    implementation 'androidx.appcompat:appcompat:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'com.google.android.material:material:1.0.0'

    implementation 'androidx.appcompat:appcompat:1.4.2'
    implementation 'com.google.android.material:material:1.6.0'

    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    implementation 'com.github.zcweng:switch-button:0.0.3@aar'
    implementation 'com.github.davidpizarro:pickerui:1.0.1'
    implementation 'com.google.firebase:firebase-core:21.1.1'
    //    implementation project(":usbserial-6.0.6-debug")
//    implementation 'me.weyye.hipermission:library:1.0.7'
    implementation 'com.google.android.things:androidthings:1.0'
    implementation project(':usbserial')
    implementation 'com.annimon:stream:1.2.2'
    implementation 'com.squareup.okio:okio:3.2.0'
    implementation 'io.github.handharbeni:wheelview-module:1.0.0'
}